<resources>
    <string name="app_name">MyWeatherApp</string>
    <string name="temperature">Temperature</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="description">Description</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_today_s_weather">Get today\'s weather</string>
    <string name="weather_forecast">Go to weather forecast</string>
</resources>